<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/colorBack"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBack"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:gravity="center"
                android:background="@drawable/mybuttonteacher"
                android:layout_marginHorizontal="10dp"
                style="@style/Widget.AppCompat.TextView"
                android:text="@string/numberSchoool"
                android:textColor="@color/colorBlack"
                android:textSize="30dp" />

            <Button
                android:id="@+id/teacherexit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/mybutton"
                android:text="@string/teach"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:textSize="18dp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/pupilexit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/mybutton"
                android:text="@string/pupil"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:textSize="18dp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/adminexit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/mybutton"
                android:text="@string/admin"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:textSize="18dp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/directorexit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/mybutton"
                android:text="@string/director"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:textSize="18dp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/parrentexit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/mybutton"
                android:text="@string/parrent"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:textSize="18dp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginVertical="10dp"
                android:layout_marginTop="15dp"
                app:srcCompat="@mipmap/logotype" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>